--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# .env
-# .flaskenv
 # instance
 flask_session
 additionalComments.md
@@ -11,8 +9,11 @@ node_modules
 
 
 # local env files
-# .env.local
-# .env.*.local
+.flaskenv
+.env
+
+# python virtual env
+env 
 
 # Log files
 npm-debug.log*
